# shixun2

./: .gitignore  CHANGELOG.md  README.md  _plan_dump.txt  _taskbook_dump.txt  out.json  pyproject.toml  日报_2026-06-26.md  日报_2026-06-29.md  日报_完整开发记录.md
.codex/: project-memory.md
assets/: test.docx  title.md  同类开源方案调研报告.docx  开题报告_课题11_面向RAG的智能分段与内容组织智能体.docx
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  model_settings.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  document_preprocessor.py  embedding.py  evaluator.py  model_settings.py  organizer.py  segmenter.py
backend/app/services/document_loader/: __init__.py  docx_loader.py  exceptions.py  (+3 more)
backend/tests/: eval_dataset.py  test_keyword_extraction.py  test_model_settings.py  test_qa_quality_evaluator.py  test_query_retrieval.py  test_segmenting.py  test_synthesize_qa.py
data/rag/: rag_meta.db
data/rag/chroma/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  req.md  vite.config.js
frontend/src/: App.vue
frontend/src/api/: chunking.js  client.js  settings.js
frontend/src/components/: ChunkList.vue  ConfigPanel.vue  MetricPanel.vue  RetrievalPanel.vue
frontend/src/router/: index.js
frontend/src/stores/: chunkStore.js
frontend/src/views/: HomeView.vue  SettingsView.vue
scripts/: ai_chunking_agent_demo.py  draw_architecture.py  eval_rag.py  eval_report.py  human_eval_semantic.py  run_backend.ps1  run_frontend.ps1  segment_file.py  synthesize_qa_pairs.py  tune_segmenting_params.py
(+27 files in other folders)
