[project]
name = "shixun2"
version = "0.1.0"
description = "RAG智能分段与内容组织智能体 — 课题11"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-docx",
    "pymupdf",
    "python-multipart",
    "langchain",
    "langchain-openai",
    "scikit-learn",
    "tiktoken",
    "sentence-transformers",
    "numpy",
    "jieba",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

# ── PyCharm 工具配置 ──────────────────────────────

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
