[project]
name = "shixun2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.138.1",
    "jieba>=0.42.1",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
        "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "uvicorn>=0.46.0",
    "langchain_openai"
]
